--- a/world_time_application/pubspec.yaml
+++ b/world_time_application/pubspec.yaml
@@ -31,10 +31,13 @@ dependencies:
     flutter:
         sdk: flutter
     http: ^1.2.0
+    intl: ^0.19.0
+    flutter_spinkit: ^5.2.0
 
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
+    path_provider: ^2.1.2
 
 dev_dependencies:
     flutter_test:
@@ -58,10 +61,20 @@ flutter:
     uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
-
+    assets:
+        - lib/assets/Morning Time.jpg
+        - lib/assets/Night Time.jpg
+        - lib/assets/Vietnam Flag.jpg
+        - lib/assets/Cuba Flag.jpg
+        - lib/assets/Russia Flag.jpg
+        - lib/assets/Bhutan Flag.jpg
+        - lib/assets/Egypt Flag.jpg
+        - lib/assets/Japan Flag.jpg
+        - lib/assets/Korea Flag.jpg
+        - lib/assets/Iran Flag.jpg
+        - lib/assets/UK Flag.jpg
+        - lib/assets/Hong Kong Flag.jpg
+        - lib/assets/USA Flag.jpg
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
 
