--- a/world_time_application/pubspec.yaml
+++ b/world_time_application/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
-    path_provider: ^2.1.2
 
 dev_dependencies:
     flutter_test:
@@ -62,19 +61,20 @@ flutter:
 
     # To add assets to your application, add an assets section, like this:
     assets:
-        - lib/assets/Morning Time.jpg
-        - lib/assets/Night Time.jpg
-        - lib/assets/Vietnam Flag.jpg
-        - lib/assets/Cuba Flag.jpg
-        - lib/assets/Russia Flag.jpg
-        - lib/assets/Bhutan Flag.jpg
-        - lib/assets/Egypt Flag.jpg
-        - lib/assets/Japan Flag.jpg
-        - lib/assets/Korea Flag.jpg
-        - lib/assets/Iran Flag.jpg
-        - lib/assets/UK Flag.jpg
-        - lib/assets/Hong Kong Flag.jpg
-        - lib/assets/USA Flag.jpg
+        - assets/data/data.txt
+        - assets/MorningTime.jpg
+        - assets/NightTime.jpg
+        - assets/VietnamFlag.jpg
+        - assets/CubaFlag.jpg
+        - assets/RussiaFlag.jpg
+        - assets/BhutanFlag.jpg
+        - assets/EgyptFlag.jpg
+        - assets/JapanFlag.jpg
+        - assets/KoreaFlag.jpg
+        - assets/IranFlag.jpg
+        - assets/UKFlag.jpg
+        - assets/Hong_KongFlag.jpg
+        - assets/USAFlag.jpg
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
 
